--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li>
             <a href="zonedownload.html" class="link-nav">Zona De Descarga</a>
           </li>          <li>
-            <a href="index2.html" class="link-nav">GTP-REALMS</a>
+            <a href="Gtp_Realms.html" class="link-nav">GTP-REALMS</a>
           </li>
           <li><a href="index.html">Home</a></li>
         </ul>
