--- a/media.html
+++ b/media.html
@@ -28,6 +28,7 @@
             <ul>
                 <li><a href="Servers.html" class="link-nav">Servers o Realms</a></li>
                 <li><a href="zonedownload.html" class="link-nav">Zona De Descarga</a></li>
+                <li><a href="Gtp_Realms.html" class="link-nav">Gtp_Realms</a></li>
                 <li><a href="index.html">Home</a></li>
             </ul>
         </div>
